
* Importing the deprecated stdlib module ``distutils`` now emits ``deprecated_module`` on Python 3.10+.

* ``missing-raises-doc`` will now check the class hierarchy of the raised exceptions

  .. code-block:: python

    def my_function()
      """My function.

      Raises:
        Exception: if something fails
      """
      raise ValueError

  Closes #4955

* Allow disabling ``duplicate-code`` with a disable comment when running through
  pylint.

  Closes #214

* Improve ``invalid-name`` check for ``TypeVar`` names.
  The accepted pattern can be customized with ``--typevar-rgx``.

  Closes #3401

* Added new checker ``typevar-name-missing-variance``. Emitted when a covariant
  or contravariant ``TypeVar`` does not end with  ``_co`` or ``_contra`` respectively or
  when a ``TypeVar`` is not either but has a suffix.

* Allow usage of mccabe 0.7.x release

  Closes #5878

* Fix ``unused-private-member`` false positive when accessing private methods through ``property``.

  Closes #4756


What's New in Pylint 2.12.2?
============================
Release date: 2021-11-25

* Fixed a false positive for ``unused-import`` where everything
  was not analyzed properly inside typing guards.

* Fixed a false-positive regression for ``used-before-assignment`` for
  typed variables in the body of class methods that reference the same class

  Closes #5342

* Specified that the ``ignore-paths`` option considers "\" to represent a
  windows directory delimiter instead of a regular expression escape
  character.

* Fixed a crash with the ``ignore-paths`` option when invoking the option
  via the command line.

  Closes #5437

* Fixed handling of Sphinx-style parameter docstrings with asterisks. These
  should be escaped with by prepending a "\".

  Closes #5406

* Add ``endLine`` and ``endColumn`` keys to output of ``JSONReporter``.

  Closes #5380

* Fixed handling of Google-style parameter specifications where descriptions